fixed modal title overflow bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,7 @@
     flex-wrap: wrap;
     padding: 0 5em;
 }
+
+.modal-card-title {
+flex-shrink: 1;
+}
